WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199755
SOAuthorizationSession::presentViewController should check WebPageProxy::isClosed()
https://bugs.webkit.org/show_bug.cgi?id=199755
Summary
SOAuthorizationSession::presentViewController should check WebPageProxy::isCl...
Jiewen Tan
Reported
2019-07-12 13:36:31 PDT
Check m_isClosed in WebPageProxy::platformWindow.
Attachments
Patch
(1.34 KB, patch)
2019-07-12 13:40 PDT
,
Jiewen Tan
no flags
Details
Formatted Diff
Diff
Patch
(1.83 KB, patch)
2019-07-12 15:54 PDT
,
Jiewen Tan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jiewen Tan
Comment 1
2019-07-12 13:36:40 PDT
<
rdar://problem/52323585
>
Jiewen Tan
Comment 2
2019-07-12 13:40:14 PDT
Created
attachment 374031
[details]
Patch
Chris Dumez
Comment 3
2019-07-12 14:14:21 PDT
Comment on
attachment 374031
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=374031&action=review
> Source/WebKit/UIProcess/mac/WebPageProxyMac.mm:640 > + if (m_isClosed)
I would instead update this check in SSO code: if (!m_page || m_viewController) { uiCallback(NO, adoptNS([[NSError alloc] initWithDomain:SOErrorDomain code:kSOErrorAuthorizationPresentationFailed userInfo:nil]).get()); return; } -> if (!m_page || m_page->isClosed() || m_viewController) { uiCallback(NO, adoptNS([[NSError alloc] initWithDomain:SOErrorDomain code:kSOErrorAuthorizationPresentationFailed userInfo:nil]).get()); return; }
Chris Dumez
Comment 4
2019-07-12 14:33:04 PDT
(In reply to Chris Dumez from
comment #3
)
> Comment on
attachment 374031
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=374031&action=review
> > > Source/WebKit/UIProcess/mac/WebPageProxyMac.mm:640 > > + if (m_isClosed) > > I would instead update this check in SSO code: > if (!m_page || m_viewController) { > uiCallback(NO, adoptNS([[NSError alloc] initWithDomain:SOErrorDomain > code:kSOErrorAuthorizationPresentationFailed userInfo:nil]).get()); > return; > } > > -> > > if (!m_page || m_page->isClosed() || m_viewController) { > uiCallback(NO, adoptNS([[NSError alloc] initWithDomain:SOErrorDomain > code:kSOErrorAuthorizationPresentationFailed userInfo:nil]).get()); > return; > }
Also, do we have API testing for SSO? If so, it'd be good to have a test that starts an SSO request then calls _close on the webView right away.
Jiewen Tan
Comment 5
2019-07-12 15:05:06 PDT
Comment on
attachment 374031
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=374031&action=review
Thanks Chris for reviewing the patch.
>>> Source/WebKit/UIProcess/mac/WebPageProxyMac.mm:640 >>> + if (m_isClosed) >> >> I would instead update this check in SSO code: >> if (!m_page || m_viewController) { >> uiCallback(NO, adoptNS([[NSError alloc] initWithDomain:SOErrorDomain code:kSOErrorAuthorizationPresentationFailed userInfo:nil]).get()); >> return; >> } >> >> -> >> >> if (!m_page || m_page->isClosed() || m_viewController) { >> uiCallback(NO, adoptNS([[NSError alloc] initWithDomain:SOErrorDomain code:kSOErrorAuthorizationPresentationFailed userInfo:nil]).get()); >> return; >> } > > Also, do we have API testing for SSO? If so, it'd be good to have a test that starts an SSO request then calls _close on the webView right away.
Sure thing. However, it still feels weird that caller of m_page->platformWindow() needs to check m_page->isClosed(). SSO tests are all API tests which should be able to reproduce what you suggest. Let me try.
Jiewen Tan
Comment 6
2019-07-12 15:54:36 PDT
Created
attachment 374045
[details]
Patch
Chris Dumez
Comment 7
2019-07-12 16:03:14 PDT
Comment on
attachment 374045
[details]
Patch r=me
Jiewen Tan
Comment 8
2019-07-12 16:08:07 PDT
(In reply to Chris Dumez from
comment #7
)
> Comment on
attachment 374045
[details]
> Patch > > r=me
Thanks, Chris.
WebKit Commit Bot
Comment 9
2019-07-12 17:53:36 PDT
Comment on
attachment 374045
[details]
Patch Clearing flags on attachment: 374045 Committed
r247410
: <
https://trac.webkit.org/changeset/247410
>
WebKit Commit Bot
Comment 10
2019-07-12 17:53:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug