SOAuthorizationSession::presentViewController should check WebPageProxy::isClosed() https://bugs.webkit.org/show_bug.cgi?id=199755 <rdar://problem/52323585>

Reviewed by Chris Dumez.

WebPageProxy::pageClient() is not guaranteed to be non null all the time. Therefore, we should check
WebPageProxy::isClosed() before using it.

* UIProcess/Cocoa/SOAuthorization/SOAuthorizationSession.mm:
(WebKit::SOAuthorizationSession::presentViewController):


Canonical link: https://commits.webkit.org/213645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247410 268f45cc-cd09-0410-ab3c-d52691b4dbfc